--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-fastapi
-bs4
-requests
-uvicorn
-pydantic
-playwright
+fastapi==0.111.0
+uvicorn==0.30.1
+selenium==4.22.0
+webdriver-manager==4.0.1
